--- a/_posts/2025-04-20-blog-post-5.md
+++ b/_posts/2025-04-20-blog-post-5.md
@@ -1,7 +1,7 @@
 ---
-title: 'Markdown 基础语法'
+title: 'learning MarkDown Notes'
 date: 2025-04-20
-permalink: /posts/2025/04/learning MarkDown Notes/
+permalink: /posts/2025/04/blog-post-5/
 tags:
   - markdown
   - grammer
